--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.6.0
   shared_preferences: ^2.5.3
   flutter_screenutil: ^5.9.3
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -76,17 +77,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+#  fonts:
+#   - family: Inter
+#     fonts:
+#       - asset: fonts/Inter_28pt-Bold.ttf
+#       - asset: fonts/Inter_28pt-Regular.ttf
+#       - asset: fonts/Inter_28pt-SemiBold.ttf
+#       - asset: fonts/Inter_28pt-Thin.ttf
+#   - family: Trajan Pro
+#     fonts:
+#       - asset: fonts/TrajanPro.ttf
+#       - asset: fonts/TrajanPro_Bold.ttf
+#         weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
