--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.3.2
   rxdart: ^0.28.0
   flutter_slidable: ^4.0.3
+  web_socket: ^1.0.1
 
 dev_dependencies:
   flutter_test:
