--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   rxdart: ^0.28.0
   flutter_slidable: ^4.0.3
   web_socket_channel: ^3.0.3
+  intl: ^0.20.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
